<resources>
    <string name="app_name">MadFinal</string>
    <string name="UserName">Username :-</string>
    <string name="Welcome">Welcome To</string>
    <string name="FastFix">FastFix</string>
    <string name="password">Password:-</string>
    <string name="LoginButton">Login</string>
    <string name="Rember">Remeber me</string>
    <string name="fogpw" />
    <string name="fogetpw">Forgot passwordtodo ?</string>
    <string name="Or">Or</string>
    <string name="Lgwith">Login With</string>
    <string name="newuser">New User? Clik to Sign Up</string>
    <string name="Help">We\'ll help you to create an account in just few steps.</string>
    <string name="JoinFX">Join Fast Fix</string>
    <string name="EnterNames">Input Name</string>
    <string name="SelectDOB">Select Date Of Birth</string>
    <string name="Email">Input Email</string>
    <string name="passsowrd">Input Password</string>
    <string name="CPass">Confirm Password</string>
    <string name="Phoen">Input Phone Number</string>
    <string name="userName">Input Username</string>
    <string name="Cont">Continue</string>
    <string name="WorkType">Please Select your prefered work type</string>
    <string name="ckAdnroid">Android</string>
    <string name="CKIos">IOS</string>
    <string name="Cklaptops">Laptops</string>
    <string name="CkCamera">Camera</string>
    <string name="Cktele">Television</string>
    <string name="CkOthers">Other</string>
    <string name="Preferedworl">Prefered Work Type</string>
    <string name="about">About yourself</string>
    <string name="AvgPrice">Average Price</string>
    <string name="Note">"Please note that FastFix will charge 15% for every Sucessfull service completed "</string>
    <string name="Save">Save</string>
    <string name="techName">Input Technician Name</string>
    <string name="techDis">Input Technician Display Name</string>
    <string name="techmoto">"Just a few clicks away from being the best technician "</string>

    <string name="newus">New User?</string>
    <string name="Csuer">Create User</string>
    <string name="TechName">Input Technician Name</string>
    <string name="techDispla">Input Technician Display Name</string>
    <string name="phone">+94</string>
    <string name="phine1">94</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NavHome">Home</string>
    <string name="NavRequest">Make a Request</string>
    <string name="ViewReq">View My Requests</string>
    <string name="NavProfile">Profile</string>
    <string name="NavOffers">My Offers</string>
    <string name="NavSettings">Settings</string>
    <string name="NavLogout">Logout</string>
    <string name="MakeOffer">Make Offer</string>
    <string name="MakeRequest">Request A Service</string>
    <string name="Custname">Customer Display Name</string>
    <string name="Title22">Title</string>
    <string name="Desc">Description</string>
    <string name="Phone">Phone</string>
    <string name="deadline">Needed Before</string>
    <string name="RequestID" />
    <string name="RequestID1">Request ID :-</string>
    <string name="Requestedby">Requested By :-</string>
    <string name="Title1">Title:-</string>
    <string name="Desc1">Description :-</string>
    <string name="Deadline">Deadline :-</string>
    <string name="Phone1">Phone :-</string>
    <string name="Status">Assinged To :-</string>
    <string name="Edit">Edit Details</string>
    <string name="Close1">Close Request</string>
    <string name="techname1">Technician Name :-</string>
    <string name="Stype">"Service type :- "</string>
    <string name="AboutS">About Service</string>
    <string name="EsDdate">Estimated Delivery Date :-</string>
    <string name="pRaneg">Price Range :-</string>
    <string name="SubmitService">Submit Service</string>
    <string name="techname">Technician Name :-</string>
    <string name="Stype1">Service Type :-</string>
    <string name="Eta">Estimated Delivery :-</string>
    <string name="Praneg">Price Range</string>
    <string name="AboutSrvice">About Service :-</string>
    <string name="SRequest">Send Request</string>
    <string name="CustName">Customer Name :-</string>
    <string name="ConNum">Contact Number :-</string>
    <string name="Issue">Issue :-</string>
    <string name="RequestRes">Requests Recived</string>
    <string name="ReqRec">"Requests Recived "</string>
    <string name="Cutsname1">"Customer Name "</string>
    <string name="ConNum1">Contact Number</string>
    <string name="Issue1">Issue</string>
    <string name="btnDecline">Decline</string>
    <string name="btnAccept">Accept</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="CancelService">Cancel Service</string>
    <string name="EditService">Edit Service</string>
    <string name="Update">Update</string>
    <string name="Close12">Close</string>
    <string name="View">View</string>
    <string name="SerType">sertype</string>
    <string name="serName">sername</string>
    <string name="Crequyest">Complete Request</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="as">TODO</string>
    <string name="asd">Button</string>
    <string name="RID">Request ID:-</string>
    <string name="assto">Assinged To :-</string>
    <string name="p1">Phone :-</string>
    <string name="EditD">Edit Details</string>
    <string name="Sertype">Service  Type</string>
    <string name="stype">Service Type :-</string>
    <string name="Sertyp4">Service Type :-</string>
    <string name="accept_request">Accept Request</string>
    <string name="changeReuqest">Update My Request</string>
    <string name="Delete">Delete</string>
    <string name="txtHeading">User Profile</string>
    <string name="txtfname">First Name</string>
    <string name="txtlname">Last Name</string>
    <string name="txtuname">Username</string>
    <string name="txtdob">Date Of Birth</string>
    <string name="txtemail">Email</string>
    <string name="txtPhone">Contact Number</string>
    <string name="txtpwd">Password</string>
    <string name="txtheading">User Profile</string>
    <string name="txtTecProfile">Technician Profile</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="lh">Login</string>
    <string name="Login">Login</string>
    <string name="Edirsertvic">Edit Service</string>
    <string name="cRequest">Complete Request</string>
    <string name="sReq" />
    <string name="sreq">Send Request</string>
    <string name="upser" />
    <string name="upser1">Update Service</string>
    <string name="srequest11">"Submit  Request "</string>
    <string name="deel">Delete Account</string>
    <string name="Up">Update Profile</string>
    <string name="teh">Technician Profile</string>
    <string name="Userpro">User Profile</string>
    <string name="t">Ttitle</string>
    <string name="Title11">Title:-</string>
    <string name="Desc11">Description :-</string>
    <string name="v">View</string>
    <string name="abs">About Service:-</string>
    <string name="o">Price:-</string>
    <string name="Title">Title</string>
    <string name="desss">Description</string>
    <string name="usernmaee">Input Username</string>
    <string name="usernmaenew">Input User Display Name</string>
</resources>