<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    tools:context=".AdminSide.technicianSignupPortal">

    <View
        android:id="@+id/topview6"
        android:layout_width="376dp"
        android:layout_height="535dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:alpha="0.45"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsubHeading" />

    <View
        android:id="@+id/topview2"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:alpha="0.7"
        android:background="#33213A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="105dp"
        android:layout_height="83dp"
        android:src="@drawable/png"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveiew"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:alpha="0.7"
        android:background="@drawable/wave1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="73dp" />

    <TextView
        android:id="@+id/txtsubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/WorkType"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chk_televsion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cktele"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/chk_camera"
        tools:layout_editor_absoluteX="146dp" />

    <CheckBox
        android:id="@+id/chk_laptops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/Cklaptops"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/chk_Ios2"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/Chk_Android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ckAdnroid"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/chk_camera"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <CheckBox
        android:id="@+id/chk_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/CkCamera"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/Chk_Android" />

    <CheckBox
        android:id="@+id/chk_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/CkOthers"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/chk_televsion"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/Preferedworl"
        android:textColor="#F3EFEF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Chk_Android"
        app:layout_constraintTop_toTopOf="@+id/topview6" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/about"
        android:textColor="#F3EFEF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Edx_aboutyou"
        app:layout_constraintTop_toBottomOf="@+id/chk_camera" />

    <CheckBox
        android:id="@+id/chk_Ios2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/CKIos"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/Chk_Android"
        app:layout_constraintStart_toEndOf="@+id/Chk_Android" />

    <TextView
        android:id="@+id/txtHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="120dp"
        android:text="@string/JoinFX"
        android:textColor="#FBF9F9"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topview2" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="379dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Note"
        android:textColor="#0099ff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edx_price" />

    <EditText
        android:id="@+id/Edx_price"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/Edx_aboutyou"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/AvgPrice"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Edx_price"
        app:layout_constraintTop_toBottomOf="@+id/Edx_aboutyou" />

    <CheckBox
        android:id="@+id/chk_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:text="Agree"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView61" />

    <Button
        android:id="@+id/btn_Save"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="128dp"
        android:background="@drawable/button_default"
        android:text="@string/Save"
        android:textColor="#ffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_agree" />

</androidx.constraintlayout.widget.ConstraintLayout>