<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    app:headerLayout="@layout/activity_home"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topview3"
        android:layout_width="365dp"
        android:layout_height="514dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="28dp"
        android:alpha="0.45"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Ex_Username"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Ex_password"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/topview"
        android:layout_width="411dp"
        android:layout_height="68dp"
        android:alpha="0.7"
        android:background="#33213A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="70dp"

        android:text="@string/Login"
        android:textColor="#F8F5F5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/topview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="77dp"
        android:src="@drawable/png"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="33dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:text="@string/UserName"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="167dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ex_Username" />

    <Button
        android:id="@+id/LoginButton"

        android:layout_width="150dp"
        android:layout_height="45dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/button_default"
        android:shadowColor="#FAF6F5"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ex_password" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="134dp"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/Rember"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFCFC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:text="@string/fogetpw"
        android:textColor="#F4F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Lgwith"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/topview3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/topview3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/newus"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/SignupBoton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/topview3"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/SignupBoton1"
        android:layout_width="136dp"
        android:layout_height="33dp"

        android:background="@drawable/button_default"
        android:text="Click to Signup"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/textSignup"
        app:layout_constraintEnd_toStartOf="@+id/topview3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textSignup" />

</androidx.constraintlayout.widget.ConstraintLayout>