<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    tools:context=".AdminSide.AcceptDeclineTech">

    <View
        android:id="@+id/topview"
        android:layout_width="414dp"
        android:layout_height="74dp"
        android:alpha="0.7"
        android:background="#33213A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:src="@drawable/png"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"

        android:text="@string/MakeRequest"
        android:textColor="#F8F5F5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/topview"
        app:layout_constraintTop_toTopOf="@+id/topview" />

    <View
        android:id="@+id/topview2"
        android:layout_width="353dp"
        android:layout_height="513dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:alpha="0.45"
        android:background="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Asssingedto" />

    <TextView
        android:id="@+id/Asssingedto"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deadline" />

    <TextView
        android:id="@+id/Deadline"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/RequestedBy"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RequestID" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RequestedBy" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/RequestID1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview" />

    <TextView
        android:id="@+id/RequestID"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/textbox"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/Requestedby"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/Desc1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/Deadline"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/Status"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/Phone1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <Button
        android:id="@+id/approove"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="108dp"
        android:background="@drawable/button_default"
        android:text="@string/accept_request"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

</androidx.constraintlayout.widget.ConstraintLayout>